<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".EditFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_edit_user_profile"
            android:layout_width="105dp"
            android:layout_height="105dp"
            app:cardCornerRadius="250dp"
            app:cardBackgroundColor="@color/divider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="250dp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/iv_user_profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@color/icon"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile"
                    android:visibility="visible" />

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button"
            app:layout_constraintBottom_toTopOf="@id/cv_edit_user_profile"
            app:layout_constraintLeft_toRightOf="@id/cv_edit_user_profile"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_edit_user_profile"
            app:layout_constraintVertical_bias="0.505"
            android:text="@string/edit_profile_photo"
            style="@style/edit_buttons"/>

        <View
            android:id="@+id/view_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#BDBDBD"
            app:layout_constraintStart_toStartOf="@+id/cv_edit_user_profile"
            app:layout_constraintTop_toBottomOf="@id/cv_edit_user_profile" />

        <TextView
            android:id="@+id/tv_edit_name_label"
            style="@style/edit_activity_labels"
            android:layout_marginTop="16dp"
            android:text="@string/name_label"
            app:layout_constraintLeft_toLeftOf="@id/view_divider"
            app:layout_constraintTop_toBottomOf="@id/view_divider" />

        <TextView
            android:id="@+id/tv_edit_gender_label"
            android:text="@string/gender_label"
            app:layout_constraintLeft_toLeftOf="@id/tv_edit_name_label"
            app:layout_constraintTop_toBottomOf="@id/tv_edit_name_label"
            style="@style/edit_activity_labels"/>

        <TextView
            android:id="@+id/tv_edit_age_label"
            android:text="@string/age_label"
            app:layout_constraintLeft_toLeftOf="@id/tv_edit_gender_label"
            app:layout_constraintTop_toBottomOf="@id/tv_edit_gender_label"
            style="@style/edit_activity_labels"/>

        <TextView
            android:id="@+id/tv_edit_height_label"
            android:text="@string/height_label"
            app:layout_constraintLeft_toLeftOf="@id/tv_edit_age_label"
            app:layout_constraintTop_toBottomOf="@id/tv_edit_age_label"
            style="@style/edit_activity_labels"/>

        <TextView
            android:id="@+id/tv_edit_weight_label"
            android:text="@string/weight_label"
            app:layout_constraintLeft_toLeftOf="@id/tv_edit_height_label"
            app:layout_constraintTop_toBottomOf="@id/tv_edit_height_label"
            style="@style/edit_activity_labels"/>

        <TextView
            android:id="@+id/tv_edit_country_label"
            android:text="@string/country_label"
            app:layout_constraintLeft_toLeftOf="@id/tv_edit_weight_label"
            app:layout_constraintTop_toBottomOf="@id/tv_edit_weight_label"
            style="@style/edit_activity_labels"/>

        <TextView
            android:id="@+id/tv_edit_city_label"
            android:text="@string/city_label"
            app:layout_constraintLeft_toLeftOf="@id/tv_edit_country_label"
            app:layout_constraintTop_toBottomOf="@id/tv_edit_country_label"
            style="@style/edit_activity_labels"/>

        <EditText
            android:id="@+id/et_edit_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="56dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_edit_name_label"
            app:layout_constraintLeft_toRightOf="@id/tv_edit_name_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_edit_name_label"
            tools:text="Snoopy" />

        <Spinner
            android:id="@+id/spin_edit_gender"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="@+id/tv_edit_gender_label"
            app:layout_constraintLeft_toLeftOf="@id/et_edit_name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_edit_gender_label" />

        <EditText
            android:id="@+id/et_edit_age"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@+id/tv_edit_age_label"
            app:layout_constraintLeft_toLeftOf="@id/et_edit_name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_edit_age_label"
            tools:text="47" />

        <EditText
            android:id="@+id/et_edit_height"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@+id/tv_edit_height_label"
            app:layout_constraintLeft_toLeftOf="@id/et_edit_name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_edit_height_label"
            tools:text="120" />

        <EditText
            android:id="@+id/et_edit_weight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@+id/tv_edit_weight_label"
            app:layout_constraintLeft_toLeftOf="@id/et_edit_name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_edit_weight_label"
            tools:text="30" />

        <EditText
            android:id="@+id/et_edit_country"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@+id/tv_edit_country_label"
            app:layout_constraintLeft_toLeftOf="@id/et_edit_name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_edit_country_label"
            tools:text="US" />

        <EditText
            android:id="@+id/et_edit_city"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@+id/tv_edit_city_label"
            app:layout_constraintLeft_toLeftOf="@id/et_edit_name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_edit_city_label"
            tools:text="LA" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>