<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".GoalFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".GoalActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight_question"
            style="@style/goal_activity_labels"
            />

        <EditText
            android:id="@+id/et_input_current_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/goal_activity_values"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/height_question"
            style="@style/goal_activity_labels"
            />

        <EditText
            android:id="@+id/et_input_current_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/goal_activity_values"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_question"
            style="@style/goal_activity_labels"
            />

        <RadioGroup
            android:id="@+id/radio_group_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/status_active"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/status_active"
                android:checked="true"
                style="@style/goal_activity_values"/>

            <RadioButton
                android:id="@+id/status_sedentary"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/status_sedentary"
                style="@style/goal_activity_values"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Would you like to lose, gain, or maintain your weight?"
            style="@style/goal_activity_labels" />

        <RadioGroup
            android:id="@+id/radio_group_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/goal_lose_weight"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="Lose"
                android:checked="true"
                style="@style/goal_activity_values"/>

            <RadioButton
                android:id="@+id/goal_gain_weight"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="Gain"
                style="@style/goal_activity_values"/>

            <RadioButton
                android:id="@+id/goal_maintain_weight"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="Maintain"
                style="@style/goal_activity_values"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goal_weight_question"
            style="@style/goal_activity_labels" />


        <EditText
            android:id="@+id/et_input_goal_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/goal_activity_values"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/button_send_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="send"
                style="@style/edit_buttons"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/output_calories_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:visibility="invisible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BMR_label"
                style="@style/goal_activity_labels"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_BMR_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1187"
                    style="@style/goal_activity_values"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="calories/day"
                    style="@style/goal_activity_values"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goal_calories_label"
                style="@style/goal_activity_labels" />

            <TextView
                android:id="@+id/tv_suggested_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="You need to eat 350 calories a week to gain 5 pounds"
                style="@style/goal_activity_values"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/warning_message_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/warning_label"
                style="@style/goal_activity_labels" />

            <TextView
                android:id="@+id/warning_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Trying to lose more 2 lbs a week may cause negative impact on your body."
                style="@style/goal_activity_values"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>