<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linearLayout_modules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/ib_profile"
            android:src="@drawable/profile"
            style="@style/main_activity_bottom_buttons"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Profile"
            android:textColor="@color/colorPrimaryDark"/>

        <ImageButton
            android:id="@+id/ib_map"
            style="@style/main_activity_bottom_buttons"
            android:src="@drawable/map"
            android:tooltipText="hikes"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Hikes"
            android:textColor="@color/colorPrimaryDark"/>

        <ImageButton
            android:id="@+id/ib_weather"
            style="@style/main_activity_bottom_buttons"
            android:src="@drawable/weather" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Weather"
            android:textColor="@color/colorPrimaryDark"/>

        <ImageButton
            android:id="@+id/ib_bmi"
            style="@style/main_activity_bottom_buttons"
            android:src="@drawable/bmi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="BMI"
            android:textColor="@color/colorPrimaryDark"/>

        <ImageButton
            android:id="@+id/ib_goal"
            style="@style/main_activity_bottom_buttons"
            android:src="@drawable/goal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Goal"
            android:textColor="@color/colorPrimaryDark"/>

        <ImageButton
            android:id="@+id/ib_step_counter"
            style="@style/main_activity_bottom_buttons"
            android:src="@drawable/step_counter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Steps"
            android:textColor="@color/colorPrimaryDark"/>

        <ImageButton
            android:id="@+id/ib_logout"
            style="@style/main_activity_bottom_buttons"
            android:src="@drawable/logout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Logout"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout >
</ScrollView>
